refactor: comments API, errorHandler middleware
