# routes/posts.routes.js
@@ -1,56 +1,42 @@
 const express = require("express");
 const router = express.Router({ mergeParams: true });
-const { Users, Posts } = require("../models");
+const { Posts } = require("../models");
 const authMiddleware = require("../middlewares/auth-middleware.js");
+const errorHandler = require("../middlewares/errorHandler");
 
 // POST: 게시글 작성 API
 router.post("/", authMiddleware, async (req, res) => {
-	const { userId } = res.locals.user;
+	const { userId, nickname } = res.locals.user;
 	const { title, content } = req.body;
 
 	if (!title || !content)
-		return res.status(412).json({
-			errorMessage: "데이터 형식이 올바르지 않습니다.",
-		});
+		throw new Error("412/데이터의 형식이 일치하지 않습니다.");
+
 	if (typeof title !== "string")
-		return res.status(412).json({
-			errorMessage: "게시글 제목의 형식이 일치하지 않습니다.",
-		});
+		throw new Error("412/게시글 제목의 형식이 일치하지 않습니다.");
+
 	if (typeof content !== "string")
-		return res.status(412).json({
-			errorMessage: "게시글 내용의 형식이 일치하지 않습니다.",
-		});
+		throw new Error("412/게시글 내용의 형식이 일치하지 않습니다.");
 
 	try {
-		const existingUser = await Users.findById(userId);
-		const nickname = existingUser.nickname;
-		await Posts.create({ nickname, title, content, userId });
+		await Posts.create({ nickname, title, content, UserId: userId });
 		res.status(201).json({ message: "게시글을 작성에 성공하였습니다." });
 	} catch (error) {
-		console.error(error);
-		res.status(400).json({ errorMessage: "게시글 작성에 실패하였습니다." });
+		throw new Error("400/게시글 작성에 실패하였습니다.");
 	}
 });
 
 // GET: 전체 게시글 목록 조회 API
 router.get("/", async (req, res) => {
 	try {
-		const allPosts = await Posts.find({})
-			.sort({ createdAt: "desc" })
-			.exec();
-
-		let posts = allPosts.map((post) => ({
-			postId: post._id,
-			userId: post.userId,
-			nickname: post.nickname,
-			title: post.title,
-			createdAt: post.createdAt,
-			updatedAt: post.updatedAt,
-		}));
+		const posts = await Posts.findAll({
+			order: [["createdAt", "DESC"]],
+		});
+		if (posts.length === 0)
+			throw new Error("404/게시글이 존재하지 않습니다.");
 		res.status(200).json({ posts });
 	} catch (error) {
-		console.error(error);
-		res.status(400).json({ errorMessage: "게시글 조회에 실패하였습니다." });
+		throw new Error(error.message || "400/게시글 조회에 실패하였습니다.");
 	}
 });
 
@@ -58,26 +44,12 @@ router.get("/", async (req, res) => {
 router.get("/:_postId", async (req, res) => {
 	const { _postId } = req.params;
 
-	if (_postId.length !== 24)
-		return res
-			.status(412)
-			.json({ errorMessage: "데이터 형식이 올바르지 않습니다." });
-
 	try {
-		const targetPost = await Posts.findOne({ _id: _postId }).exec();
-		let post = {
-			postId: targetPost._id,
-			userId: targetPost.userId,
-			nickname: targetPost.nickname,
-			title: targetPost.title,
-			content: targetPost.content,
-			createdAt: targetPost.createdAt,
-			updatedAt: targetPost.updatedAt,
-		};
+		const post = await Posts.findByPk(_postId);
+		if (!post) throw new Error("404/게시글이 존재하지 않습니다.");
 		res.status(200).json({ post });
 	} catch (error) {
-		console.error(error);
-		res.status(400).json({ errorMessage: "게시글 조회에 실패하였습니다." });
+		throw new Error(error.message || "400/게시글 조회에 실패하였습니다.");
 	}
 });
 
@@ -87,46 +59,33 @@ router.put("/:_postId", authMiddleware, async (req, res) => {
 	const { title, content } = req.body;
 	const { _postId } = req.params;
 
-	if (_postId.length !== 24)
-		return res
-			.status(412)
-			.json({ errorMessage: "데이터 형식이 올바르지 않습니다." });
-
 	if (!title || !content)
-		return res
-			.status(412)
-			.json({ errorMessage: "데이터 형식이 올바르지 않습니다." });
+		throw new Error("412/데이터 형식이 올바르지 않습니다.");
+
 	if (typeof title !== "string")
-		return res
-			.status(412)
-			.json({ errorMessage: "게시글 제목의 형식이 올바르지 않습니다." });
+		throw new Error("412/게시글 제목의 형식이 올바르지 않습니다.");
+
 	if (typeof content !== "string")
-		return res
-			.status(412)
-			.json({ errorMessage: "게시글 내용의 형식이 올바르지 않습니다." });
+		throw new Error("412/게시글 내용의 형식이 올바르지 않습니다.");
+
+	const existingPost = await Posts.findOne({
+		where: { UserId: userId, postId: _postId }, // where절 key값 case-insensitive
+	});
+
+	if (!existingPost)
+		throw new Error("403/게시글 수정의 권한이 존재하지 않습니다.");
 
 	try {
-		const existingPost = await Posts.findOne({
-			userId,
-			_id: _postId,
-		}).exec();
-		if (!existingPost)
-			return res.status(403).json({
-				errorMessage: "게시글 수정의 권한이 존재하지 않습니다.",
+		await Posts.update(
+			{ title, content },
+			{ where: { UserId: userId, postId: _postId } }
+		)
+			.then(res.status(200).json({ message: "게시글을 수정하였습니다." }))
+			.catch((error) => {
+				throw new Error("401/게시글이 정상적으로 수정되지 않았습니다.");
 			});
-		await Posts.updateOne(
-			{ userId, _id: _postId },
-			{ $set: { title, content } }
-		).catch((error) => {
-			console.error(error);
-			res.status(401).json({
-				errorMessage: "게시글이 정상적으로 수정되지 않았습니다.",
-			});
-		});
-		res.status(200).json({ message: "게시글을 수정하였습니다." });
 	} catch (error) {
-		console.error(error);
-		res.status(400).json({ errorMessage: "게시글 수정에 실패하였습니다." });
+		throw new Error(error.message || "400/게시글 수정에 실패하였습니다.");
 	}
 });
 
@@ -135,38 +94,30 @@ router.delete("/:_postId", authMiddleware, async (req, res) => {
 	const { userId } = res.locals.user;
 	const { _postId } = req.params;
 
-	if (_postId.length !== 24)
-		return res
-			.status(412)
-			.json({ errorMessage: "데이터 형식이 올바르지 않습니다." });
+	const existingPost = await Posts.findByPk(_postId);
+	if (!existingPost) {
+		throw new Error("404/게시글이 존재하지 않습니다.");
+	}
+	if (existingPost.UserId !== userId)
+		throw new Error("403/게시글의 삭제 권한이 존재하지 않습니다.");
 
 	try {
-		const existingPost = await Posts.findOne({ _id: _postId }).exec();
-		if (existingPost) {
-			if (existingPost.userId.toString() !== userId) {
-				return res.status(403).json({
-					errorMessage: "게시글의 삭제 권한이 존재하지 않습니다.",
-				});
-			}
-			await Posts.deleteOne({ userId, _id: _postId }).catch((error) => {
-				console.error(error);
-				return res.status(401).json({
-					errorMessage: "게시글이 정상적으로 삭제되지 않았습니다.",
-				});
+		await Posts.destroy({
+			where: { UserId: userId, postId: _postId },
+		})
+			.then(
+				res.status(200).json({
+					message: "게시글을 삭제하였습니다.",
+				})
+			)
+			.catch((error) => {
+				throw new Error("401/게시글이 정상적으로 삭제되지 않았습니다.");
 			});
-			await Comments.deleteMany({ userId, postId: _postId });
-			res.status(200).json({
-				message: "게시글을 삭제하였습니다.",
-			});
-		} else {
-			return res.status(404).json({
-				errorMessage: "게시글이 존재하지 않습니다.",
-			});
-		}
 	} catch (error) {
-		console.error(error);
-		res.status(400).json({ errorMessage: "게시글 삭제에 실패하였습니다." });
+		throw new Error(error.message || "400/게시글 삭제에 실패하였습니다.");
 	}
 });
+
+router.use(errorHandler);
 
 module.exports = router;
