# swagger-output.json
@@ -1,19 +1,30 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "항해 14기 노드반 HW2 Blog APIs",
+    "title": "항해 14기 노드반 Blog APIs",
     "description": "김시원, 정하욱",
     "version": "1.0.0"
   },
-  "host": "localhost:3001",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http"
   ],
   "paths": {
+    "/": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/users/signup": {
       "post": {
-        "description": "POST 요청으로 새로운 유저의 닉네임, 비밀번호, 비밀번호 확인을 저장합니다.",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -22,13 +33,13 @@
               "type": "object",
               "properties": {
                 "nickname": {
-                  "example": "test"
+                  "example": "any"
                 },
                 "password": {
-                  "example": "password123!"
+                  "example": "any"
                 },
                 "confirmedPassword": {
-                  "example": "password123!"
+                  "example": "any"
                 }
               }
             }
@@ -37,19 +48,13 @@
         "responses": {
           "201": {
             "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "412": {
-            "description": "Precondition Failed"
           }
         }
       }
     },
     "/users/login": {
       "post": {
-        "description": "POST 요청으로 유저의 닉네임, 비밀번호를 확인 후 로그인 처리를 합니다.",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -58,10 +63,10 @@
               "type": "object",
               "properties": {
                 "nickname": {
-                  "example": "test"
+                  "example": "any"
                 },
                 "password": {
-                  "example": "password123!"
+                  "example": "any"
                 }
               }
             }
@@ -70,19 +75,13 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "412": {
-            "description": "Precondition Failed"
           }
         }
       }
     },
     "/posts/": {
       "post": {
-        "description": "POST 요청으로 게시글을 저장합니다.",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -91,10 +90,10 @@
               "type": "object",
               "properties": {
                 "title": {
-                  "example": "게시글 제목 입니다."
+                  "example": "any"
                 },
                 "content": {
-                  "example": "게시글 내용 입니다."
+                  "example": "any"
                 }
               }
             }
@@ -104,33 +103,24 @@
           "201": {
             "description": "Created"
           },
-          "400": {
-            "description": "Bad Request"
-          },
           "403": {
             "description": "Forbidden"
-          },
-          "412": {
-            "description": "Precondition Failed"
           }
         }
       },
       "get": {
-        "description": "GET 요청으로 전체 게시글을 보여줍니다.",
+        "description": "",
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           }
         }
       }
     },
     "/posts/{_postId}": {
       "get": {
-        "description": "GET 요청으로 특정 게시글을 보여줍니다.",
+        "description": "",
         "parameters": [
           {
             "name": "_postId",
@@ -142,17 +132,11 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "412": {
-            "description": "Precondition Failed"
           }
         }
       },
       "put": {
-        "description": "PUT 요청으로 게시글을 수정합니다.",
+        "description": "",
         "parameters": [
           {
             "name": "_postId",
@@ -167,10 +151,10 @@
               "type": "object",
               "properties": {
                 "title": {
-                  "example": "수정된 제목 입니다."
+                  "example": "any"
                 },
                 "content": {
-                  "example": "수정된 내용 입니다."
+                  "example": "any"
                 }
               }
             }
@@ -180,22 +164,13 @@
           "200": {
             "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
           "403": {
             "description": "Forbidden"
-          },
-          "412": {
-            "description": "Precondition Failed"
           }
         }
       },
       "delete": {
-        "description": "DELETE 요청으로 게시글을 삭제합니다.",
+        "description": "",
         "parameters": [
           {
             "name": "_postId",
@@ -208,27 +183,15 @@
           "200": {
             "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
           "403": {
             "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "412": {
-            "description": "Precondition Failed"
           }
         }
       }
     },
     "/posts/{_postId}/comments/": {
       "post": {
-        "description": "POST 요청으로 특정 게시글의 댓글을 저장합니다.",
+        "description": "",
         "parameters": [
           {
             "name": "_postId",
@@ -243,7 +206,7 @@
               "type": "object",
               "properties": {
                 "comment": {
-                  "example": "해당 게시글의 댓글 입니다"
+                  "example": "any"
                 }
               }
             }
@@ -253,22 +216,13 @@
           "201": {
             "description": "Created"
           },
-          "400": {
-            "description": "Bad Request"
-          },
           "403": {
             "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "412": {
-            "description": "Precondition Failed"
           }
         }
       },
       "get": {
-        "description": "GET 요청으로 특정 게시글의 전체 댓글을 보여줍니다.",
+        "description": "",
         "parameters": [
           {
             "name": "_postId",
@@ -280,22 +234,13 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "412": {
-            "description": "Precondition Failed"
           }
         }
       }
     },
     "/posts/{_postId}/comments/{_commentId}": {
       "put": {
-        "description": "PUT 요청으로 해당 게시글의 특정 댓글을 수정합니다.",
+        "description": "",
         "parameters": [
           {
             "name": "_postId",
@@ -316,7 +261,7 @@
               "type": "object",
               "properties": {
                 "comment": {
-                  "example": "수정된 댓글 입니다."
+                  "example": "any"
                 }
               }
             }
@@ -326,22 +271,13 @@
           "200": {
             "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
-          },
           "403": {
             "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "412": {
-            "description": "Precondition Failed"
           }
         }
       },
       "delete": {
-        "description": "DELETE 요청으로 해당 게시글의 특정 댓글을 삭제합니다.",
+        "description": "",
         "parameters": [
           {
             "name": "_postId",
@@ -360,17 +296,8 @@
           "200": {
             "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
-          },
           "403": {
             "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "412": {
-            "description": "Precondition Failed"
           }
         }
       }
